# advent-of-code

./: .gitignore  README.md
2023/daily-template/: Cargo.toml
2023/day-04/: Cargo.toml
2023/day-05/: Cargo.toml
2023/day-06/: Cargo.toml
2023/day-07/: Cargo.toml
2023/day-08/: main.zig
2023/day-09/: main.zig
2023/test/: build.zig  build.zig.zon  quickselect.zig
day-01-1/: Cargo.toml  input.txt:Zone.Identifier  main.py
day-01-2/: Cargo.toml
day-01-2/src/: main.rs
python/day-03/: part1.py
rust/day-01/: Cargo.toml
rust/day-03/: Cargo.toml
