[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"
nom = "7.1.3"
nom-supreme = "0.8.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
test-log = "0.2.13"
